Update index html and js

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <!-- EndPage -->
     <div class="endpage"></div>
 
-    <script src="./javascript/index.js"></script>
+    <script src="index.js"></script>
 
 </body>
 </html>
