--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="ISO-8859-1" />
-    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1">
+
     <link rel="stylesheet" href="style.css" />
 
     <title>Porfolio: LFF, Game Designer</title>
@@ -26,10 +27,10 @@
         <h3 class="subtitle"> Desarrollado en UE 4.27 | Beatem'up | Projecto de Final de Máster </h3>
         <div class="box-text">
             <p>
-                Durante 8 meses estuve colabornado en el desarrollo de este proyecto junto a un equipo de 
+                Durante 8 meses estuve colabornado en el desarrollo de este proyecto junto a un equipo de
                 <b>35 personas</b>. Mi <b>principal responsabilidad fue el diseño de los 2 enemigos</b>
                 que hay en el juego asi como su correspondiente parametrización.
-                
+
                 Otros aspectos relevantes que hice fue el <b>diseño de niveles</b>, parametrización del
                 jugador y QA, participando en distintos playtesting para la recopilación de información y
                 mejorar el juego.<br /><br />
@@ -100,9 +101,11 @@
                     <span class="read-more-text">
                         El equipo estaba formado por 4 programadores, 2 músicos que nos apoyaron de forma telemática
                         proporcionandonos efectos de sonido y música, y un diseñador (un servidor).<br /><br />
-                        
-                        Al final del evento, obtuvimos el <b style="color: white;">premio al juego con la mejor
-                        temática</b> de la JAM en la Universidad Complutense de Madrid, que fue donde participamos.
+
+                        Al final del evento, obtuvimos el <b style="color: white;">
+                            premio al juego con la mejor
+                            temática
+                        </b> de la JAM en la Universidad Complutense de Madrid, que fue donde participamos.
                         La <b style="color: white;">temática era <i>"raices"</i></b>, muchos se centraron en temas
                         relacionados con la vegetación, nosotros en cambio decidimos arriesgarnos con algo más
                         atrevido y relacionarlo con la carpeta o el directorio raíz de los ordenadores.
