--- a/index.html
+++ b/index.html
@@ -1,187 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="style.css" />
-
-    <title>Porfolio: LFF, Game Designer</title>
+    <meta charset="UTF-8" />
+    <title>Página Web</title>
 </head>
 <body>
-    <!-- HEADER -->
-    <header class="head">
-        <h2 class="logo">LFF, Game Designer</h2>
-        <nav class="navbar">
-            <a href="#">Página principal</a>
-            <a href="#">Sobre mi</a>
-        </nav>
-    </header>
-
-    <!-- Document -->
-    <!-- Gloom Reaper -->
-    <section class="content_gloom_reaper">
-        <h2 class="title">Gloom Reaper</h2>
-        <h3 class="subtitle"> Desarrollado en UE 4.27 | Beatem'up | Projecto de Final de Máster </h3>
-        <div class="box-text">
-            <p>
-                Durante 8 meses estuve colabornado en el desarrollo de este proyecto junto a un equipo de
-                <b>35 personas</b>. Mi <b>principal responsabilidad fue el diseño de los 2 enemigos</b>
-                que hay en el juego asi como su correspondiente parametrización.
-
-                Otros aspectos relevantes que hice fue el <b>diseño de niveles</b>, parametrización del
-                jugador y QA, participando en distintos playtesting para la recopilación de información y
-                mejorar el juego.<br /><br />
-
-                En el siguiente video se muestra un gameplay del juego:
-            </p>
-        </div>
-
-        <iframe class="video" width="560" height="315"
-                src="https://www.youtube.com/embed/0yztCYtoYwA?mute=0&showinfo=0&controls=1&start=0"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-
-        <!-- More info -->
-        <div class="container-extra-info">
-            <div class="box-text" style="display: none;">
-                <p>
-                    <span class="read-more-text">
-                        Como ya he mencionado anteriormente, se ha realizado en colaboración con varias personas de
-                        distintos departamentos, para ser más precisos 6: Diseño, Programación, Producción,
-                        Marketing, Arte y Audio.<br /><br />
-
-                        Sin embargo, y a pesar de la cantidad de personas que eramos, la participación, la
-                        cooperación y el número de involucradas eran de unas pocas personas. Debido a esto y a como
-                        iba encaminado el desarrollo, nos vimos en la necesidad de establecer roles de líderes en
-                        los departamentos. En el caso de Diseño, tuve que asumir esa responsabilidad.<br /><br />
-
-                        Gracias a esta medida, a la restructuración de prioridades y a la coordinación con el líder
-                        de Programación, Marco Expósito Pérez, pudimos entregar y terminar el juego.
-
-                        Como Diseñador
-                    </span>
-                </p>
-            </div>
-            <a class="btn read-more-btn">Saber más</a>
-        </div>
-        <!-- Enlace del juego -->
-        <div class="btn-container">
-            <a class="btn-link" href="https://store.steampowered.com/app/2378410/Gloom_Reaper/"><b>Descargar Gloom Reaper</b></a>
-        </div>
-
-    </section>
-
-    <div class="separator"> <hr /> </div>
-
-    <!-- The Root -->
-    <section class="content_blocks">
-        <h2 class="title">The Root</h2>
-        <h3 class="subtitle"> Desarrollado en Unity 2021.3.18f1 | Arcade, Puzzle | Global Game JAM: 2023 </h3>
-        <div class="box-text">
-            <p>
-                En un plazo de 48 horas desarrolle junto a 6 personas este proyecto para la GG JAM. La labor que
-                desempeñe durante todo ese tiempo fue como <b style="color: white;">diseñador y artista</b>.
-            </p>
-        </div>
-
-        <iframe class="video" width="560" height="315"
-                src="https://www.youtube.com/embed/lUzs9GHposM?mute=0&showinfo=0&controls=1&start=0"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-
-        <!-- More info -->
-        <div class="container-extra-info">
-            <div class="box-text" style="display: none;">
-                <p>
-                    <span class="read-more-text">
-                        El equipo estaba formado por 4 programadores, 2 músicos que nos apoyaron de forma telemática
-                        proporcionandonos efectos de sonido y música, y un diseñador (un servidor).<br /><br />
-
-                        Al final del evento, obtuvimos el <b style="color: white;">
-                            premio al juego con la mejor
-                            temática
-                        </b> de la JAM en la Universidad Complutense de Madrid, que fue donde participamos.
-                        La <b style="color: white;">temática era <i>"raices"</i></b>, muchos se centraron en temas
-                        relacionados con la vegetación, nosotros en cambio decidimos arriesgarnos con algo más
-                        atrevido y relacionarlo con la carpeta o el directorio raíz de los ordenadores.
-
-                        En este proyecto colaboré con mis compañeros para implementar un nivel básico
-
-                    </span>
-                </p>
-            </div>
-            <a class="btn read-more-btn">Saber más</a>
-        </div>
-
-    </section>
-
-    <div class="separator"><hr /></div>
-
-    <!-- The Endless Fishing Sheep -->
-    <section class="content_blocks">
-        <h2 class="title">The Endless Fishing Sheep</h2>
-        <h3 class="subtitle"> Desarrollado en Unity 2021.3.18f1 | Arcade, Puzzle | JAM, Madrid in Game: Octubre 2023 </h3>
-        <div class="box-text">
-            <p>
-                More text
-            </p>
-        </div>
-
-        <iframe width="560" height="315"
-                src="https://www.youtube.com/embed/DU4R5WAYA1o?mute=0&showinfo=0&controls=1&start=0"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-
-        <!-- More info -->
-        <div class="container-extra-info">
-            <div class="box-text" style="display: none;">
-                <p>
-                    <span class="read-more-text">
-                        More text
-                    </span>
-                </p>
-            </div>
-            <a class="btn read-more-btn">Saber más</a>
-        </div>
-
-    </section>
-
-    <div class="separator"> <hr /> </div>
-
-    <!-- Lineage of Deities: Tale of Arges -->
-    <section class="content_LoD_ToA">
-        <article class="contain">
-            <h3 class="title">Lineage of Deities: Tale of Arges</h3>
-            <p>
-                es el nombre de los distintos protagonistas de la serie de videojuegos The Legend of Zelda de Nintendo,
-                creada por Shigeru Miyamoto en 1986, una de las franquicias más exitosas de la empresa (hasta 2007,
-                ha vendido más de 47 millones de copias a nivel mundial). La popularidad de Zelda ha dado lugar a
-                varias encarnaciones de la trama original y, por ende, de Link; el personaje hizo su primera aparición
-                en el título homónimo, como un héroe épico que lucha contra el mal.
-            </p>
-
-            <p>Texto</p>
-
-            <a href="#" class="btn">Saber más</a>
-
-        </article>
-
-        <iframe width="560" height="315"
-                src="https://www.youtube.com/embed/n-f56zl1oLU?si=jxlJmOJDSg7H3sll"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-
-    </section>
-
-    <!-- EndPage -->
-    <div class="endpage"></div>
-
-    <script src="index.js"></script>
-
+    <p>Hello there, página</p>
 </body>
 </html>
