--- a/index.html
+++ b/index.html
@@ -36,121 +36,8 @@
 </head>
 <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en">
     <header class="u-border-2 u-border-no-left u-border-no-right u-border-no-top u-border-palette-1-base u-clearfix u-header u-header" id="sec-a518">
-        <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-            <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1 u-enable-responsive">
-                <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
-                    <a class="u-button-style u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
-                        <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
-                        <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
-                            <g>
-                                <rect y="1" width="16" height="2"></rect>
-                                <rect y="7" width="16" height="2"></rect>
-                                <rect y="13" width="16" height="2"></rect>
-                            </g>
-                        </svg>
-                    </a>
-                </div>
-                <div class="u-custom-menu u-nav-container">
-                    <ul class="u-nav u-spacing-2 u-unstyled u-nav-1">
-                        <li class="u-nav-item">
-                            <a class="u-active-palette-1-base u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-hover-palette-1-light-2 u-nav-link u-text-active-white u-text-grey-90 u-text-hover-white" href="Main.html" style="padding: 10px 20px;">Main</a>
-                        </li>
-                        <li class="u-nav-item">
-                            <a class="u-active-palette-1-base u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-hover-palette-1-light-2 u-nav-link u-text-active-white u-text-grey-90 u-text-hover-white active" href="All-games.html" style="padding: 10px 20px;">All games</a>
-                        </li>
-                        <li class="u-nav-item">
-                            <a class="u-active-palette-1-base u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-hover-palette-1-light-2 u-nav-link u-text-active-white u-text-grey-90 u-text-hover-white" href="About-Me.html" style="padding: 10px 20px;">About me</a>
-                        </li>
-                        <li class="u-nav-item">
-                            <a class="u-active-palette-1-base u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-hover-palette-1-light-2 u-nav-link u-text-active-white u-text-grey-90 u-text-hover-white" href="Contact.html" style="padding: 10px 20px;">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="u-custom-menu u-nav-container-collapse">
-                    <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
-                        <div class="u-inner-container-layout u-sidenav-overflow">
-                            <div class="u-menu-close"></div>
-                            <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2">
-                                <li class="u-nav-item">
-                                    <a class="u-button-style u-nav-link" href="Main.html">Main</a>
-                                </li>
-                                <li class="u-nav-item">
-                                    <a class="u-button-style u-nav-link active" href="All-games.html">All games</a>
-                                </li>
-                                <li class="u-nav-item">
-                                    <a class="u-button-style u-nav-link" href="About-Me.html">About me</a>
-                                </li>
-                                <li class="u-nav-item">
-                                    <a class="u-button-style u-nav-link" href="Contact.html">Contact</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
-                </div>
-                <style class="offcanvas-style">
-                    .u-offcanvas .u-sidenav {
-                        flex-basis: 250px !important;
-                    }
-
-                    .u-offcanvas:not(.u-menu-open-right) .u-sidenav {
-                        margin-left: -250px;
-                    }
-
-                    .u-offcanvas.u-menu-open-right .u-sidenav {
-                        margin-right: -250px;
-                    }
-
-                    @keyframes menu-shift-left {
-                        from {
-                            left: 0;
-                        }
-
-                        to {
-                            left: 250px;
-                        }
-                    }
-
-                    @keyframes menu-unshift-left {
-                        from {
-                            left: 250px;
-                        }
-
-                        to {
-                            left: 0;
-                        }
-                    }
-
-                    @keyframes menu-shift-right {
-                        from {
-                            right: 0;
-                        }
-
-                        to {
-                            right: 250px;
-                        }
-                    }
-
-                    @keyframes menu-unshift-right {
-                        from {
-                            right: 250px;
-                        }
-
-                        to {
-                            right: 0;
-                        }
-                    }
-                </style>
-            </nav>
-            <h4 class="u-text u-text-default u-text-1">Marco Expósito Pérez</h4>
-        </div>
+        <p>Hello there</p>
     </header>
-
-
-
-
-    
-
 
 
     <p>PÁGIÑA</p>
