--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
 
 
 </head>
-<body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en">
-    <header class="u-border-2 u-border-no-left u-border-no-right u-border-no-top u-border-palette-1-base u-clearfix u-header u-header" id="sec-a518">
-        <p>Hello there</p>
-    </header>
-
+<body data-lang="en">
 
     <p>PÁGIÑA</p>
 </body>
