--- a/index.html
+++ b/index.html
@@ -1,12 +1,188 @@
-Ôªø<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <title>HAY√ç√ç√ç√ç√ç√ç√ç√çA</title>
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="style.css" />
+
+    <title>Porfolio: LFF, Game Designer</title>
 </head>
 <body>
-    <p>P√ÅGI√ëA</p>
+    <!-- HEADER -->
+    <header class="head">
+        <h2 class="logo">LFF, Game Designer</h2>
+        <nav class="navbar">
+            <a href="#">P·gina principal</a>
+            <a href="#">Sobre mi</a>
+        </nav>
+    </header>
+
+    <!-- Document -->
+    <!-- Gloom Reaper -->
+    <section class="content_gloom_reaper">
+        <h2 class="title">Gloom Reaper</h2>
+        <h3 class="subtitle"> Desarrollado en UE 4.27 | Beatem'up | Projecto de Final de M·ster </h3>
+        <div class="box-text">
+            <p>
+                Durante 8 meses estuve colabornado en el desarrollo de este proyecto junto a un equipo de
+                <b>35 personas</b>. Mi <b>principal responsabilidad fue el diseÒo de los 2 enemigos</b>
+                que hay en el juego asi como su correspondiente parametrizaciÛn.
+
+                Otros aspectos relevantes que hice fue el <b>diseÒo de niveles</b>, parametrizaciÛn del
+                jugador y QA, participando en distintos playtesting para la recopilaciÛn de informaciÛn y
+                mejorar el juego.<br /><br />
+
+                En el siguiente video se muestra un gameplay del juego:
+            </p>
+        </div>
+
+        <iframe class="video" width="560" height="315"
+                src="https://www.youtube.com/embed/0yztCYtoYwA?mute=0&showinfo=0&controls=1&start=0"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+
+        <!-- More info -->
+        <div class="container-extra-info">
+            <div class="box-text" style="display: none;">
+                <p>
+                    <span class="read-more-text">
+                        Como ya he mencionado anteriormente, se ha realizado en colaboraciÛn con varias personas de
+                        distintos departamentos, para ser m·s precisos 6: DiseÒo, ProgramaciÛn, ProducciÛn,
+                        Marketing, Arte y Audio.<br /><br />
+
+                        Sin embargo, y a pesar de la cantidad de personas que eramos, la participaciÛn, la
+                        cooperaciÛn y el n˙mero de involucradas eran de unas pocas personas. Debido a esto y a como
+                        iba encaminado el desarrollo, nos vimos en la necesidad de establecer roles de lÌderes en
+                        los departamentos. En el caso de DiseÒo, tuve que asumir esa responsabilidad.<br /><br />
+
+                        Gracias a esta medida, a la restructuraciÛn de prioridades y a la coordinaciÛn con el lÌder
+                        de ProgramaciÛn, Marco ExpÛsito PÈrez, pudimos entregar y terminar el juego.
+
+                        Como DiseÒador
+                    </span>
+                </p>
+            </div>
+            <a class="btn read-more-btn">Saber m·s</a>
+        </div>
+        <!-- Enlace del juego -->
+        <div class="btn-container">
+            <a class="btn-link" href="https://store.steampowered.com/app/2378410/Gloom_Reaper/"><b>Descargar Gloom Reaper</b></a>
+        </div>
+
+    </section>
+
+    <div class="separator"> <hr /> </div>
+
+    <!-- The Root -->
+    <section class="content_blocks">
+        <h2 class="title">The Root</h2>
+        <h3 class="subtitle"> Desarrollado en Unity 2021.3.18f1 | Arcade, Puzzle | Global Game JAM: 2023 </h3>
+        <div class="box-text">
+            <p>
+                En un plazo de 48 horas desarrolle junto a 6 personas este proyecto para la GG JAM. La labor que
+                desempeÒe durante todo ese tiempo fue como <b style="color: white;">diseÒador y artista</b>.
+            </p>
+        </div>
+
+        <iframe class="video" width="560" height="315"
+                src="https://www.youtube.com/embed/lUzs9GHposM?mute=0&showinfo=0&controls=1&start=0"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+
+        <!-- More info -->
+        <div class="container-extra-info">
+            <div class="box-text" style="display: none;">
+                <p>
+                    <span class="read-more-text">
+                        El equipo estaba formado por 4 programadores, 2 m˙sicos que nos apoyaron de forma telem·tica
+                        proporcionandonos efectos de sonido y m˙sica, y un diseÒador (un servidor).<br /><br />
+
+                        Al final del evento, obtuvimos el <b style="color: white;">
+                            premio al juego con la mejor
+                            tem·tica
+                        </b> de la JAM en la Universidad Complutense de Madrid, que fue donde participamos.
+                        La <b style="color: white;">tem·tica era <i>"raices"</i></b>, muchos se centraron en temas
+                        relacionados con la vegetaciÛn, nosotros en cambio decidimos arriesgarnos con algo m·s
+                        atrevido y relacionarlo con la carpeta o el directorio raÌz de los ordenadores.
+
+                        En este proyecto colaborÈ con mis compaÒeros para implementar un nivel b·sico
+
+                    </span>
+                </p>
+            </div>
+            <a class="btn read-more-btn">Saber m·s</a>
+        </div>
+
+    </section>
+
+    <div class="separator"><hr /></div>
+
+    <!-- The Endless Fishing Sheep -->
+    <section class="content_blocks">
+        <h2 class="title">The Endless Fishing Sheep</h2>
+        <h3 class="subtitle"> Desarrollado en Unity 2021.3.18f1 | Arcade, Puzzle | JAM, Madrid in Game: Octubre 2023 </h3>
+        <div class="box-text">
+            <p>
+                More text
+            </p>
+        </div>
+
+        <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/DU4R5WAYA1o?mute=0&showinfo=0&controls=1&start=0"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+
+        <!-- More info -->
+        <div class="container-extra-info">
+            <div class="box-text" style="display: none;">
+                <p>
+                    <span class="read-more-text">
+                        More text
+                    </span>
+                </p>
+            </div>
+            <a class="btn read-more-btn">Saber m·s</a>
+        </div>
+
+    </section>
+
+    <div class="separator"> <hr /> </div>
+
+    <!-- Lineage of Deities: Tale of Arges -->
+    <section class="content_LoD_ToA">
+        <article class="contain">
+            <h3 class="title">Lineage of Deities: Tale of Arges</h3>
+            <p>
+                es el nombre de los distintos protagonistas de la serie de videojuegos The Legend of Zelda de Nintendo,
+                creada por Shigeru Miyamoto en 1986, una de las franquicias m·s exitosas de la empresa (hasta 2007,
+                ha vendido m·s de 47 millones de copias a nivel mundial). La popularidad de Zelda ha dado lugar a
+                varias encarnaciones de la trama original y, por ende, de Link; el personaje hizo su primera apariciÛn
+                en el tÌtulo homÛnimo, como un hÈroe Èpico que lucha contra el mal.
+            </p>
+
+            <p>Texto</p>
+
+            <a href="#" class="btn">Saber m·s</a>
+
+        </article>
+
+        <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/n-f56zl1oLU?si=jxlJmOJDSg7H3sll"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+
+    </section>
+
+    <!-- EndPage -->
+    <div class="endpage"></div>
+
+    <script src="index.js"></script>
+
 </body>
 </html>
