DO ITSON OF A *%$&/

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Ôªø<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,30 +8,32 @@
     <link rel="stylesheet" href="style.css" />
 
     <title>Porfolio: LFF, Game Designer</title>
+
 </head>
 <body>
     <!-- HEADER -->
     <header class="head">
         <h2 class="logo">LFF, Game Designer</h2>
         <nav class="navbar">
-            <a href="#">P·gina principal</a>
+            <a href="#">P√°gina principal</a>
             <a href="#">Sobre mi</a>
         </nav>
     </header>
+    <p>P√ÅGI√ëA</p>
 
     <!-- Document -->
     <!-- Gloom Reaper -->
     <section class="content_gloom_reaper">
         <h2 class="title">Gloom Reaper</h2>
-        <h3 class="subtitle"> Desarrollado en UE 4.27 | Beatem'up | Projecto de Final de M·ster </h3>
+        <h3 class="subtitle"> Desarrollado en UE 4.27 | Beatem'up | Projecto de Final de M√°ster </h3>
         <div class="box-text">
             <p>
                 Durante 8 meses estuve colabornado en el desarrollo de este proyecto junto a un equipo de
-                <b>35 personas</b>. Mi <b>principal responsabilidad fue el diseÒo de los 2 enemigos</b>
-                que hay en el juego asi como su correspondiente parametrizaciÛn.
+                <b>35 personas</b>. Mi <b>principal responsabilidad fue el dise√±o de los 2 enemigos</b>
+                que hay en el juego asi como su correspondiente parametrizaci√≥n.
 
-                Otros aspectos relevantes que hice fue el <b>diseÒo de niveles</b>, parametrizaciÛn del
-                jugador y QA, participando en distintos playtesting para la recopilaciÛn de informaciÛn y
+                Otros aspectos relevantes que hice fue el <b>dise√±o de niveles</b>, parametrizaci√≥n del
+                jugador y QA, participando en distintos playtesting para la recopilaci√≥n de informaci√≥n y
                 mejorar el juego.<br /><br />
 
                 En el siguiente video se muestra un gameplay del juego:
@@ -49,23 +51,23 @@
             <div class="box-text" style="display: none;">
                 <p>
                     <span class="read-more-text">
-                        Como ya he mencionado anteriormente, se ha realizado en colaboraciÛn con varias personas de
-                        distintos departamentos, para ser m·s precisos 6: DiseÒo, ProgramaciÛn, ProducciÛn,
+                        Como ya he mencionado anteriormente, se ha realizado en colaboraci√≥n con varias personas de
+                        distintos departamentos, para ser m√°s precisos 6: Dise√±o, Programaci√≥n, Producci√≥n,
                         Marketing, Arte y Audio.<br /><br />
 
-                        Sin embargo, y a pesar de la cantidad de personas que eramos, la participaciÛn, la
-                        cooperaciÛn y el n˙mero de involucradas eran de unas pocas personas. Debido a esto y a como
-                        iba encaminado el desarrollo, nos vimos en la necesidad de establecer roles de lÌderes en
-                        los departamentos. En el caso de DiseÒo, tuve que asumir esa responsabilidad.<br /><br />
+                        Sin embargo, y a pesar de la cantidad de personas que eramos, la participaci√≥n, la
+                        cooperaci√≥n y el n√∫mero de involucradas eran de unas pocas personas. Debido a esto y a como
+                        iba encaminado el desarrollo, nos vimos en la necesidad de establecer roles de l√≠deres en
+                        los departamentos. En el caso de Dise√±o, tuve que asumir esa responsabilidad.<br /><br />
 
-                        Gracias a esta medida, a la restructuraciÛn de prioridades y a la coordinaciÛn con el lÌder
-                        de ProgramaciÛn, Marco ExpÛsito PÈrez, pudimos entregar y terminar el juego.
+                        Gracias a esta medida, a la restructuraci√≥n de prioridades y a la coordinaci√≥n con el l√≠der
+                        de Programaci√≥n, Marco Exp√≥sito P√©rez, pudimos entregar y terminar el juego.
 
-                        Como DiseÒador
+                        Como Dise√±ador
                     </span>
                 </p>
             </div>
-            <a class="btn read-more-btn">Saber m·s</a>
+            <a class="btn read-more-btn">Saber m√°s</a>
         </div>
         <!-- Enlace del juego -->
         <div class="btn-container">
@@ -83,7 +85,7 @@
         <div class="box-text">
             <p>
                 En un plazo de 48 horas desarrolle junto a 6 personas este proyecto para la GG JAM. La labor que
-                desempeÒe durante todo ese tiempo fue como <b style="color: white;">diseÒador y artista</b>.
+                desempe√±e durante todo ese tiempo fue como <b style="color: white;">dise√±ador y artista</b>.
             </p>
         </div>
 
@@ -98,23 +100,23 @@
             <div class="box-text" style="display: none;">
                 <p>
                     <span class="read-more-text">
-                        El equipo estaba formado por 4 programadores, 2 m˙sicos que nos apoyaron de forma telem·tica
-                        proporcionandonos efectos de sonido y m˙sica, y un diseÒador (un servidor).<br /><br />
+                        El equipo estaba formado por 4 programadores, 2 m√∫sicos que nos apoyaron de forma telem√°tica
+                        proporcionandonos efectos de sonido y m√∫sica, y un dise√±ador (un servidor).<br /><br />
 
                         Al final del evento, obtuvimos el <b style="color: white;">
                             premio al juego con la mejor
-                            tem·tica
+                            tem√°tica
                         </b> de la JAM en la Universidad Complutense de Madrid, que fue donde participamos.
-                        La <b style="color: white;">tem·tica era <i>"raices"</i></b>, muchos se centraron en temas
-                        relacionados con la vegetaciÛn, nosotros en cambio decidimos arriesgarnos con algo m·s
-                        atrevido y relacionarlo con la carpeta o el directorio raÌz de los ordenadores.
+                        La <b style="color: white;">tem√°tica era <i>"raices"</i></b>, muchos se centraron en temas
+                        relacionados con la vegetaci√≥n, nosotros en cambio decidimos arriesgarnos con algo m√°s
+                        atrevido y relacionarlo con la carpeta o el directorio ra√≠z de los ordenadores.
 
-                        En este proyecto colaborÈ con mis compaÒeros para implementar un nivel b·sico
+                        En este proyecto colabor√© con mis compa√±eros para implementar un nivel b√°sico
 
                     </span>
                 </p>
             </div>
-            <a class="btn read-more-btn">Saber m·s</a>
+            <a class="btn read-more-btn">Saber m√°s</a>
         </div>
 
     </section>
@@ -146,7 +148,7 @@
                     </span>
                 </p>
             </div>
-            <a class="btn read-more-btn">Saber m·s</a>
+            <a class="btn read-more-btn">Saber m√°s</a>
         </div>
 
     </section>
@@ -159,15 +161,15 @@
             <h3 class="title">Lineage of Deities: Tale of Arges</h3>
             <p>
                 es el nombre de los distintos protagonistas de la serie de videojuegos The Legend of Zelda de Nintendo,
-                creada por Shigeru Miyamoto en 1986, una de las franquicias m·s exitosas de la empresa (hasta 2007,
-                ha vendido m·s de 47 millones de copias a nivel mundial). La popularidad de Zelda ha dado lugar a
-                varias encarnaciones de la trama original y, por ende, de Link; el personaje hizo su primera apariciÛn
-                en el tÌtulo homÛnimo, como un hÈroe Èpico que lucha contra el mal.
+                creada por Shigeru Miyamoto en 1986, una de las franquicias m√°s exitosas de la empresa (hasta 2007,
+                ha vendido m√°s de 47 millones de copias a nivel mundial). La popularidad de Zelda ha dado lugar a
+                varias encarnaciones de la trama original y, por ende, de Link; el personaje hizo su primera aparici√≥n
+                en el t√≠tulo hom√≥nimo, como un h√©roe √©pico que lucha contra el mal.
             </p>
 
             <p>Texto</p>
 
-            <a href="#" class="btn">Saber m·s</a>
+            <a href="#" class="btn">Saber m√°s</a>
 
         </article>
 
