FINALLY, I CAN READ!!!

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             <a href="#">Sobre mi</a>
         </nav>
     </header>
-    <p>PÁGIÑA</p>
 
     <!-- Document -->
     <!-- Gloom Reaper -->
@@ -28,7 +27,7 @@
         <h3 class="subtitle"> Desarrollado en UE 4.27 | Beatem'up | Projecto de Final de Máster </h3>
         <div class="box-text">
             <p>
-                Durante 8 meses estuve colabornado en el desarrollo de este proyecto junto a un equipo de
+                Durante 8 meses estuve colaborando en el desarrollo de este proyecto junto a un equipo de
                 <b>35 personas</b>. Mi <b>principal responsabilidad fue el diseño de los 2 enemigos</b>
                 que hay en el juego asi como su correspondiente parametrización.
 
