Ya tenemos porfolio

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
     <!-- HEADER -->
     <header class="head">
-        <h2 class="logo">LFF, Game Designer</h2>
+        <h2 class="logo">Luis Fernández Freire, Game Designer</h2>
         <nav class="navbar">
             <a href="#">Página principal</a>
-            <a href="#">Sobre mi</a>
+            <!-- <a href="#">Sobre mi</a> -->
         </nav>
     </header>
 
@@ -28,13 +28,13 @@
         <div class="box-text">
             <p>
                 Durante 8 meses estuve colaborando en el desarrollo de este proyecto junto a un equipo de
-                <b>35 personas</b>. Mi <b>principal responsabilidad fue el diseño de los 2 enemigos</b>
+                <b style="color: white;">35 personas</b>. Mi <b style="color: white;">principal responsabilidad fue el diseño de los 2 enemigos</b>
                 que hay en el juego asi como su correspondiente parametrización.
 
                 Otros aspectos relevantes que hice fue el <b>diseño de niveles</b>, parametrización del
                 jugador y QA, participando en distintos playtesting para la recopilación de información y
-                mejorar el juego.<br /><br />
-
+                mejorar el juego.
+                <br /><br />
                 En el siguiente video se muestra un gameplay del juego:
             </p>
         </div>
@@ -52,17 +52,37 @@
                     <span class="read-more-text">
                         Como ya he mencionado anteriormente, se ha realizado en colaboración con varias personas de
                         distintos departamentos, para ser más precisos 6: Diseño, Programación, Producción,
-                        Marketing, Arte y Audio.<br /><br />
-
+                        Marketing, Arte y Audio.
+                        <br /><br />
                         Sin embargo, y a pesar de la cantidad de personas que eramos, la participación, la
                         cooperación y el número de involucradas eran de unas pocas personas. Debido a esto y a como
                         iba encaminado el desarrollo, nos vimos en la necesidad de establecer roles de líderes en
-                        los departamentos. En el caso de Diseño, tuve que asumir esa responsabilidad.<br /><br />
-
+                        los departamentos. En el caso de Diseño, tuve que asumir esa responsabilidad.
+                        <br /><br />
                         Gracias a esta medida, a la restructuración de prioridades y a la coordinación con el líder
                         de Programación, Marco Expósito Pérez, pudimos entregar y terminar el juego.
-
-                        Como Diseñador
+                        <br /><br />
+                        Como Diseñador realice el diseño y funcionalidad de varios enemigos, en la verisón final del
+                        juego tan solo hay 2. Además, debido a las circunstancias que se dieron, los enemigos
+                        sufrieron diversas modificaciones con respecto a lo que se pensó en un principio, más por
+                        la necesidad de realizar el cambio debido a las dificultades que se presentaron que por el
+                        diseño en cuestión (p.e se tuvieron que quitar puntos débiles del enemigo del gusano debido
+                        a problemas de modelado y animación).
+                        <br /><br />
+                        También realice los diseños de los niveles de la mayor parte que hay en la versión final.
+                        Junto a Marco Expósito, me coordine con el para el pulido y el diseño de las zonas de combate.
+                        <br /><br />
+                        Otra de las que cosas relevantes que lleve a cabo fue estructurar el trabajo del departamento
+                        de Diseño y Arte en UE, ya que para trabajar en una misma zona del nivel y evitar
+                        solapamientos, tuvimos que separar las las zonas y a su vez subdividirlas en la parte de
+                        diseño y la parte de arte separadas, más tarde y validadas las zonas, se cargaban en una
+                        única escena que correspondía al nivel. También me tuve que encargar de asegurarme que lo
+                        implementado a nivel artístico nunca interfiriese en las escenas de Diseño.
+                        <br /><br />
+                        Por último cabe mencionar que participe en varios playtesting, recopilando información
+                        para corregir los distintos errores que habíamos cometido o que no habíamos tenido en cuenta.
+                        Así como realizar QA del juego y aportando material visual del error o bug que encontraba y de
+                        su correspndiente notificación siguiendo el procedimiento que teníamos.
                     </span>
                 </p>
             </div>
@@ -85,6 +105,8 @@
             <p>
                 En un plazo de 48 horas desarrolle junto a 6 personas este proyecto para la GG JAM. La labor que
                 desempeñe durante todo ese tiempo fue como <b style="color: white;">diseñador y artista</b>.
+                <br /><br />
+                En el siguiente video se muestra un gameplay del juego:
             </p>
         </div>
 
@@ -100,22 +122,30 @@
                 <p>
                     <span class="read-more-text">
                         El equipo estaba formado por 4 programadores, 2 músicos que nos apoyaron de forma telemática
-                        proporcionandonos efectos de sonido y música, y un diseñador (un servidor).<br /><br />
-
-                        Al final del evento, obtuvimos el <b style="color: white;">
-                            premio al juego con la mejor
-                            temática
-                        </b> de la JAM en la Universidad Complutense de Madrid, que fue donde participamos.
-                        La <b style="color: white;">temática era <i>"raices"</i></b>, muchos se centraron en temas
+                        proporcionandonos efectos de sonido y música, y un diseñador (un servidor).
+                        <br /><br />
+                        Al final del evento, obtuvimos el <b style="color: white;"> premio al juego con la mejor
+                        temática</b> de la JAM en la Universidad Complutense de Madrid, que fue donde participamos.
+                        <b style="color: white;">La temática era <i>"raices"</i></b>, muchos se centraron en temas
                         relacionados con la vegetación, nosotros en cambio decidimos arriesgarnos con algo más
                         atrevido y relacionarlo con la carpeta o el directorio raíz de los ordenadores.
-
-                        En este proyecto colaboré con mis compañeros para implementar un nivel básico
-
+                        <br /><br />
+                        En este proyecto colaboré con mis compañeros para implementar el diseño del juego,
+                        principalmente con el líder del equipo de programación, Marco Expósito. Una vez establecidas
+                        las mecánicas y el flujo del juego me centré en el apartado artístico debido a la asuencia
+                        de artistas en el equipo, realizando los fondos de las escenas del juego así como distintos
+                        iconos para indicar el estado del servidor y de los ficheros.
+                        <br /><br />
+                        La experiencia que se quería transmitir al jugador era la de usar un equipo informático
+                        antiguo intentando recordar una etapa cercana a finales del siglo XXI.
                     </span>
                 </p>
             </div>
             <a class="btn read-more-btn">Saber más</a>
+        </div>
+        <!-- Enlace del juego -->
+        <div class="btn-container">
+            <a class="btn-link" href="https://popletox.itch.io/the-root"><b>Descargar The Root</b></a>
         </div>
 
     </section>
@@ -125,10 +155,13 @@
     <!-- The Endless Fishing Sheep -->
     <section class="content_blocks">
         <h2 class="title">The Endless Fishing Sheep</h2>
-        <h3 class="subtitle"> Desarrollado en Unity 2021.3.18f1 | Arcade, Puzzle | JAM, Madrid in Game: Octubre 2023 </h3>
+        <h3 class="subtitle"> Desarrollado en Unity 2021.3.18f1 | Arcade, Supervivencia | JAM, Madrid in Game: Octubre 2023 </h3>
         <div class="box-text">
             <p>
-                More text
+                En el transcurso de 48 horas y en colaboración con 5 personas llevamos a cabo este juego para otra JAM.
+                <b style="color: white;">En este proyecto además de realizar mi papel como diseñador también implemente tareas de programador de UI</b>.
+                <br /><br />
+                En el siguiente video se muestra un gameplay del juego:
             </p>
         </div>
 
@@ -143,11 +176,43 @@
             <div class="box-text" style="display: none;">
                 <p>
                     <span class="read-more-text">
-                        More text
+                        En este desarrolle forme equipo con 2 programadores, 2 artistas y 1 músico que nos apoyo
+                        proporcionandonos música.
+                        <br /><br />
+                        <b style="color: white;"> Como temática tuvimos tetris, y además de esta el equipo quería enfocar el juego relacionado con la pesca.</b>
+                        En base a estas especificaciones, propuse al equipo realizar un juego similar al minijuego
+                        de obtener tesoros bajo el mar que hay en
+                        <a href="https://youtu.be/C2UqUImgTiA?t=1278"><b style="color: white;">The Legend of Zelda: Phantom Hourglass</b></a>.
+                        <br /><br />
+                        A partir de aquí me fije en las referencias de ambas temáticas y determine junto a mi equipo
+                        las distintas mecánicas que teníamos que implementar. Gracias a Diego Giménez que actuó
+                        también como productor, establecimos varios hitos a los largo del juego para su realización
+                        y llegar, al menos, a completar los requisitos mínimos en su realización.
+                        <b style="color: white;">El resultado final no fue solo completar con esos riquisitos mínimos, sino con casi todo lo que nos habíamos propuesto.</b>
+                        <br /><br />
+                        <b style="color: white;">Mi aportación al equipo fue bastante amplía:</b> colaboré de forma cercana con
+                        todos los miembros del equipo, ya fuese a nivel de programación con Miguel Ángel Torrijos
+                        (que fue el líder de programación) elaborando la interfaz, menús y el desplazamiento del
+                        background durante el juego mientras el se encargaba del resto. Y también trabajando con
+                        el equipo artístico con el lenguaje de colores o con el programador de audio para el feedback
+                        sonoro del juego.
+                        <br /><br />
+                        <b style="color: white;">A nivel de diseño</b> establecí las mecánicas, flujo del juego, tamaños y proporciones, etc.
+                        <b style="color: white;">Una de mis aportaciones de diseño más importantes que considero fue la introducción de eventos horizontales</b>,
+                        esto se debe a que el tetris es un juego vertical y esto provoca que se desperdicie una gran
+                        parte de la pantalla a nivel de zona jugable, al meter enemigos que aparecian por los bordes
+                        horizontales pasaban a ser zonas de aviso que informaban al jugador. Además estas zonas
+                        sirvieron a posteiori para indicar al jugador los controles del juego y daban una jugabilidad
+                        horizontal manteniendo las bases del tetris.
+
                     </span>
                 </p>
             </div>
             <a class="btn read-more-btn">Saber más</a>
+        </div>
+        <!-- Enlace del juego -->
+        <div class="btn-container">
+            <a class="btn-link" href="https://popletox.itch.io/the-endless-fishing-sheep"><b>Descargar The Endless Fishing Sheep</b></a>
         </div>
 
     </section>
@@ -155,28 +220,53 @@
     <div class="separator"> <hr /> </div>
 
     <!-- Lineage of Deities: Tale of Arges -->
-    <section class="content_LoD_ToA">
-        <article class="contain">
-            <h3 class="title">Lineage of Deities: Tale of Arges</h3>
+    <section class="content_blocks">
+        <h2 class="title">Lineage of Deities: Tale of Arges</h2>
+        <h3 class="subtitle"> Desarrollado en Unity | Metroidvania | UAM, asignatura de videojuegos 2021 </h3>
+        <div class="box-text">
             <p>
-                es el nombre de los distintos protagonistas de la serie de videojuegos The Legend of Zelda de Nintendo,
-                creada por Shigeru Miyamoto en 1986, una de las franquicias más exitosas de la empresa (hasta 2007,
-                ha vendido más de 47 millones de copias a nivel mundial). La popularidad de Zelda ha dado lugar a
-                varias encarnaciones de la trama original y, por ende, de Link; el personaje hizo su primera aparición
-                en el título homónimo, como un héroe épico que lucha contra el mal.
+                Durante 4 meses realice este proyecto junto a un compañero en una asignatura de mi carrera de grado,
+                siendo <b style="color: white;">mi primera interacción en el mundo de desarrollo de videojuegos.</b>
+                <br /><br />
+                Fueron diversos los papeles que tuve, pero principalmente <b style="color: white;">fuí redactor del
+                GDD, diseñador de niveles, artista y animador.</b>
+                <br /><br />
+                En el siguiente video se muestra un gameplay del juego:
             </p>
-
-            <p>Texto</p>
-
-            <a href="#" class="btn">Saber más</a>
-
-        </article>
+        </div>
 
         <iframe width="560" height="315"
                 src="https://www.youtube.com/embed/n-f56zl1oLU?si=jxlJmOJDSg7H3sll"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
+
+        <!-- More info -->
+        <div class="container-extra-info">
+            <div class="box-text" style="display: none;">
+                <p>
+                    <span class="read-more-text">
+                        El juego consistía en superar una mazmorra al estilo de The Legend of Zelda mezclando la
+                        jugabilidad de los antiguos Castlevania.
+                        <br /><br />
+                        La mazmorra se dividía en 3 partes: la primera parte obtener el objeto clave de la mazmorra,
+                        la segunda obtener la llave que daba acceso a la zona final y la última parte era derrotar
+                        al jefe de la mazmorra.
+                        <br /><br />
+                        Sin embargo, los objetivos que nos pusimos para ser nuestro primer juego fueron muy
+                        ambiciosos. Al final tuvimos que realizar severos recortes para sacar adelante una versión
+                        alpha del juego.
+                        <br /><br />
+                        Como diseñador realice el diseño de la mazmorra de principio a fin, pero su implementación
+                        no se pudo llegar a materializar. Como artista realice diversos sprites como pueden ser los
+                        pilares, librerías, telarañas, banderas, candelabros de techo, el corazón y la barra de mana.
+                        Como animador me encargue de realizar las animaciones del protagonista, así como del duende
+                        que hay al principio del juego como de los items coleccionables y la hoguera.
+                    </span>
+                </p>
+            </div>
+            <a class="btn read-more-btn">Saber más</a>
+        </div>
 
     </section>
 
